<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_new" android:title="@string/actionbar_displayphoto_new_title" android:icon="@drawable/ic_add_a_photo_white_24dp"
        android:orderInCategory="100" app:showAsAction="ifRoom"  />
    <item android:id="@+id/action_delete" android:title="@string/actionbar_displayphoto_delete_title" android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100" app:showAsAction="ifRoom"  />
    <item android:id="@+id/action_edit" android:title="@string/actionbar_edit_title" android:icon="@drawable/ic_mode_edit_white_24dp"
        android:orderInCategory="100" app:showAsAction="ifRoom"  />

</menu>