<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"    android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="match_parent" android:layout_height="match_parent" >
        <!-- ADDRESS -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/realestate_address_label"
            android:id="@+id/title_address" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/realestate_edit_padding_left"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/edit_address"
            android:layout_gravity="center_horizontal"
            android:hint="@string/realestate_address_label" />
        <!-- TYPE -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/realestate_type_label"
            android:id="@+id/title_type" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            android:id="@+id/edit_type"
            android:layout_gravity="center_horizontal" />
        <!-- CONSTRUCT YEAR -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/realestate_constructYear_label"
            android:id="@+id/title_constructyear" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:paddingLeft="@dimen/realestate_edit_padding_left"
            android:inputType="number"
            android:id="@+id/edit_constructYear"
            android:focusable="false"
            android:clickable="true" />
        <!-- STARTBID -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/realestate_startBid_label"
            android:id="@+id/title_startBid" />
        <com.example.mikael.androidutvproj.EditTextNumber
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:paddingLeft="@dimen/realestate_edit_padding_left"
            android:inputType="numberDecimal"
            app:thousandSeparatorSymbol="@string/thousand_sep"
            app:decimalSeparatorSymbol="@string/decimal_sep"
            android:id="@+id/edit_startBid" />
        <!-- RENT -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/realestate_rent_label"
            android:id="@+id/title_rent" />
        <com.example.mikael.androidutvproj.EditTextNumber
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:paddingLeft="@dimen/realestate_edit_padding_left"
            android:id="@+id/edit_rent"
            app:thousandSeparatorSymbol="@string/thousand_sep"
            app:decimalSeparatorSymbol="@string/decimal_sep"
            android:inputType="numberDecimal" />
        <!-- FLOOR -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/realestate_floor_label"
            android:id="@+id/title_floor" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:focusable="false"
            android:clickable="true"
            android:paddingLeft="@dimen/realestate_edit_padding_left"
            android:id="@+id/edit_floor"
            android:inputType="numberDecimal" />
        <!-- ROOMS -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/realestate_rooms_label"
            android:id="@+id/title_rooms" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:paddingLeft="@dimen/realestate_edit_padding_left"
            android:id="@+id/edit_rooms"
            android:focusable="false"
            android:clickable="true"
            android:inputType="numberDecimal" />
        <!--LIVINGSPACE -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/realestate_livingSpace_label"
            android:id="@+id/title_livingspace" />
        <com.example.mikael.androidutvproj.EditTextNumber
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:paddingLeft="@dimen/realestate_edit_padding_left"
            android:id="@+id/edit_livingspace"
            android:focusable="false"
            android:clickable="true"
            app:thousandSeparatorSymbol="@string/thousand_sep"
            app:decimalSeparatorSymbol="@string/decimal_sep"
            android:inputType="numberDecimal" />
        <!-- DESCRIPTION -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/realestate_description_label"
            android:id="@+id/title_description" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:paddingLeft="@dimen/realestate_edit_padding_left"
            android:inputType="textAutoComplete|textMultiLine"
            android:id="@+id/edit_description" />

    </LinearLayout>
</ScrollView>